# pdf-outline-challenge

./: .gitattributes  .gitignore  Dockerfile  README.md  process_pdfs.py  pyproject.toml  quick_tests.py  requirements.txt  setup.cfg  setup.py
models/: donut_head.pkl
pdf_outline/: classify.py  cli.py  cluster.py  extract_lines.py
scripts/: outline_demo.py  prepare_donut.py  quantize_int8.py  train_head.py
wheelhouse/: MarkupSafe-2.1.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  PyMuPDF-1.24.1-cp310-none-manylinux2014_x86_64.whl  PyMuPDF-1.24.1-cp312-none-manylinux2014_x86_64.whl  PyMuPDFb-1.24.1-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl  build-1.2.2.post1-py3-none-any.whl  certifi-2025.7.14-py3-none-any.whl  charset_normalizer-3.4.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  cryptography-41.0.5-cp37-abi3-manylinux_2_28_x86_64.whl  cryptography-45.0.5-cp311-abi3-manylinux_2_34_x86_64.whl  fsspec-2025.7.0-py3-none-any.whl  huggingface_hub-0.22.1-py3-none-any.whl  huggingface_hub-0.34.2-py3-none-any.whl  onnx-1.18.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  onnxruntime-1.22.1-cp310-cp310-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  onnxruntime-1.22.1-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl  optimum-1.26.1-py3-none-any.whl  pdfminer.six-20221105-py3-none-any.whl  pdfplumber-0.10.3-py3-none-any.whl  pillow-10.4.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pillow-10.4.0-cp312-cp312-manylinux_2_28_x86_64.whl  torch-2.3.1+cpu-cp310-cp310-linux_x86_64.whl  (+3 more)
(+14 files in other folders)
